--- a/1.INIT/101.fiche_initialisation_projet.md
+++ b/1.INIT/101.fiche_initialisation_projet.md
@@ -1,12 +1,14 @@
 ---
-equipemoa: 
-nomcode: 
-groupetd: 
+equipemoa: yapadinfo
+nomcode: insalerte
+groupetd: 1
 guide: http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.AmorcerProjet
 ---
 #Fiche d'initialisation de projet
 
-- Nom de l'équipe
-- Liste des membres
-- Nom de code de l'intuition
-- Phrase qui résume l'intuition
+- Nom de l'équipe yapadinfo
+- Liste des membres CHAMBELLANT Killian "AKI", 
+                    DUMONT Melanie "ADA", 
+                    MARTIN Pauline "PDT"
+- Nom de code de l'intuition insalerte
+- Phrase qui résume l'intuition Application mobile complémentaire à Moodle et Agendas pour être alerté des notes ou des modifications de cours.
