--- a/1.INIT/105.liste_idees_brutes.md
+++ b/1.INIT/105.liste_idees_brutes.md
@@ -1,7 +1,7 @@
 ---
-equipemoa: 
-nomcode: 
-groupetd: 
+equipemoa: yapadinfo
+nomcode: insalerte
+groupetd: 1
 guide: http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.AnimerRemueMeninge
 ---
 
@@ -9,7 +9,7 @@ guide: http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.AnimerRemueMen
 
 ##Information sur l'activité
 - Date de la séance de remue-méninge: 26/01/2017 
-- Sujet: Remue méninge
+- Sujet: Remue méninge - Insalerte
 - Animateur: Pauline 
 - Secrétaire: Killian 
 - Nom des équipes participantes
