--- a/1.INIT/105.liste_idees_brutes.md
+++ b/1.INIT/105.liste_idees_brutes.md
@@ -9,9 +9,9 @@ guide: http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.AnimerRemueMen
 
 ##Information sur l'activité
 - Date de la séance de remue-méninge: 26/01/2017 
-- Sujet: Remue méninge - Insalerte
-- Animateur: Pauline 
-- Secrétaire: Killian 
+- Sujet: Application mobile complémentaire à Moodle et Agendas pour être alerté des notes ou des modifications de cours
+- Animateur: Pauline Martin
+- Secrétaire: Killian Chambellant
 - Nom des équipes participantes
   - Equipe MOA: yapadinfo
   - Equipe(s) en soutien: gosithe
