--- a/1.INIT/105.liste_idees_brutes.md
+++ b/1.INIT/105.liste_idees_brutes.md
@@ -8,7 +8,7 @@ guide: http://casisbelli.insa-rouen.fr/wiki/pmwiki.php?n=FilRouge.AnimerRemueMen
 #Liste d'idées brutes
 
 ##Information sur l'activité
-- Date de la séance de remue-méninge: 26/01/2017 
+- Date de la séance de remue-méninge: 2017-01-26 
 - Sujet: Application mobile complémentaire à Moodle et Agendas pour être alerté des notes ou des modifications de cours
 - Animateur: Pauline Martin
 - Secrétaire: Killian Chambellant
